--- a/FEWD/homework/adventuring/dashboard/admin_class.html
+++ b/FEWD/homework/adventuring/dashboard/admin_class.html
@@ -13,14 +13,14 @@
   </head>
   <body>
     <header>
-      <a href="index.html">
+      <a href="../index.html">
         <div class="logo">
           Adventuring
         </div>
        </a>
       <div class="nav">
         <ul>
-          <a href="sign_in.html"><li>sign in</li></a>
+          <a href="../sign_in.html"><li>sign in</li></a>
           <a href="#"><li>categories</li></a>
           <a href="#"><li>cities</li></a>
           <a href="account.html"><li class='last'>account</li></a>
@@ -38,12 +38,12 @@
             <table>
               <tr>
                 <th>Name:</th>
-                <td class='first_class_td'>Intermediate Rock Climbing</td>
+                <td class='first_class_td'>Intermediate Rock Climbing<img class='edit_icon' src="../images/edit-11.png"></td>
                 <td class='last_class_td'><input class='class_input' placeholder='class name'></input><button class='class_save'>save</button></td>
               </tr>
               <tr>
                 <th>Instructor:</th>
-                <td class='first_class_td'>Cameron S</td>
+                <td class='first_class_td'>Cameron S<img class='edit_icon' src="../images/edit-11.png"></td>
                 <td class='last_class_td'>
                   <select class='instructor'>
                     <option value="Cameron S">Cameron S</option>
@@ -56,17 +56,17 @@
               </tr>
               <tr>
                 <th>Date:</th>
-                <td class='first_class_td'>Sept 19, 2013</td>
+                <td class='first_class_td'>Sept 19, 2013<img class='edit_icon' src="../images/edit-11.png"></td>
                 <td class='last_class_td'><input class='class_input datepicker' placeholder='date'></input><button class='class_save'>save</button></td>
               </tr>
               <tr>
                 <th>Price:</th>
-                <td class='first_class_td'>$99</td>
+                <td class='first_class_td'>$99<img class='edit_icon' src="../images/edit-11.png"></td>
                 <td class='last_class_td'><input class='class_input' placeholder='price'></input><button class='class_save'>save</button></td>
               </tr>
               <tr>
                 <th>Location:</th>
-                <td class='first_class_td'>Castle Rock Park</td>
+                <td class='first_class_td'>Castle Rock Park<img class='edit_icon' src="../images/edit-11.png"></td>
                 <td class='last_class_td'><input class='class_input' placeholder='location'></input><button class='class_save'>save</button></td>
               </tr>
               <tr>
@@ -75,7 +75,7 @@
               </tr>
               <tr>
                 <th>Description:</th>
-                <td class='first_class_td'>Go beyond the basics with this informative rock climbing course designed for those who are ready to take the next step. In this class you will learn how to setup a basic top-rope anchor, rappel safely, and improve your climbing movement techniques. Our professional climbing instructors will provide valuable feedback while you push your climbing ability on challenging routes. This course is perfect for graduates of the Introduction to Rock Climbing class and for intermediate to advanced gym climbers looking to make the transition to outdoor rock climbing.</td>
+                <td class='first_class_td'><img class='edit_icon' src="../images/edit-11.png">Go beyond the basics with this informative rock climbing course designed for those who are ready to take the next step. In this class you will learn how to setup a basic top-rope anchor, rappel safely, and improve your climbing movement techniques. Our professional climbing instructors will provide valuable feedback while you push your climbing ability on challenging routes. This course is perfect for graduates of the Introduction to Rock Climbing class and for intermediate to advanced gym climbers looking to make the transition to outdoor rock climbing.</td>
                 <td class='last_class_td'><textarea class='description' rows="5" cols="30" placeholder='class description'></textarea><button class='class_save_description'>save</button></td>
               </tr>
 
