--- a/FEWD/homework/adventuring/sign_in.html
+++ b/FEWD/homework/adventuring/sign_in.html
@@ -25,7 +25,7 @@
           <a href="sign_in.html"><li>sign in</li></a>
           <a href="#"><li>categories</li></a>
           <a href="#"><li>cities</li></a>
-          <a href="account.html"><li class='last'>account</li></a>
+          <a href="dashboard/account.html"><li class='last'>account</li></a>
         </ul>
       </div>
     </header>
