updaded coding work

--- a/index.html
+++ b/index.html
@@ -40,33 +40,44 @@
 
         <section id="main_content">
 	
-          <h2>Coding Experience</h2>
+          <h2>Coding Work and Experience</h2>
 						<p>
-							<a href="http://www.devbootcamp.com"> Dev Bootcamp:</a> Summer 2012 session<br />
-							<a href="http://dbcmotivator.herokuapp.com"> Motivator:</a> Motivational tool to help keep you on track with your goals<br />
-							<a href="http://freds-sandwiches.herokuapp.com/"> Fred's Sandwiches:</a> Sandwich delivery app linked to Waiters on Wheels<br />
-							<a href="http://severe-robot-8200.herokuapp.com/">Craigslist Crawler:</a> Monitors a craigslist page for new listings <br />
-							<a href="http://www.traintra.in"> Cal Train Tutor: </a> Created during a Startup Weekend July 2012<br/>
-							<a href="http://summercamp.herokuapp.com"> Base Camp Clone </a><br />
-							<a href="http://askpeoplecrap.herokuapp.com">Polling Application</a><br />
-							<a href="http://hacker-news-clone.herokuapp.com/">Hacker News Clone </a><br />
-							<a href="http://url-lengthener.herokuapp.com/"> Bit.ly Clone </a><br/>
-							<a href="https://electricocean.herokuapp.com"> Hartl Tutorial </a><br/>
-						</p>
+              <a href="http://cat-sitter.herokuapp.com/">Catering Management Tool:</a> Current Project <br/>
+              <a href="http://adventuringschool.com/">Adventuring School</a> Adventure Class Market Place <br/>
+              <a href="http://www.adoptaportapotty.com/">Adopt-A-Porta-Potty</a> Burning Man Project <br/>
+              <a href="http://nutflix.herokuapp.com/">Nutflix</a> Test site for web development <br/>
+              <a href="http://offer-padmapper.herokuapp.com/">Offer Mapper</a> Maps Advertisements running on the Tapjoy network
+              <br/>
+              <a href="https://itunes.apple.com/us/app/guest-bouquet/id871622413?mt=8">Guest Bouquet</a> IOS App for Wedding Management
+              <br/>
+              <a href="https://itunes.apple.com/us/app/tip-calculator-bill-spliter/id828236597?mt=8">Tip Calculator</a> IOS App for calculating tips
+              <br/>
+              <a href="http://anediblegarden.com/"> An Edible Garden: </a>Created all visual design<br />
+              <a href="http://sixmonthtrip.herokuapp.com/about.html">Travel Book:</a> Created concept and all visual design<br />
+              <a href="http://www.katrinaafterthestorm.com/">Hurricane Katrina Book: </a>Created all visual design and cover photography<br />
+
+              <br/>
+              <a href="http://www.devbootcamp.com"> Dev Bootcamp:</a> Summer 2012 session<br />
+              <a href="http://dbcmotivator.herokuapp.com"> Motivator:</a> Motivational tool to help keep you on track with your goals<br />
+              <a href="http://freds-sandwiches.herokuapp.com/"> Fred's Sandwiches:</a> Sandwich delivery app linked to Waiters on Wheels<br />
+              <a href="http://severe-robot-8200.herokuapp.com/">Craigslist Crawler:</a> Monitors a craigslist page for new listings <br />
+              <a href="http://www.traintra.in"> Cal Train Tutor: </a> Created during a Startup Weekend July 2012<br/>
+              <a href="http://summercamp.herokuapp.com"> Base Camp Clone </a><br />
+              <a href="http://askpeoplecrap.herokuapp.com">Polling Application</a><br />
+              <a href="http://hacker-news-clone.herokuapp.com/">Hacker News Clone </a><br />
+              <a href="http://url-lengthener.herokuapp.com/"> Bit.ly Clone </a><br/>
+              <a href="https://electricocean.herokuapp.com"> Hartl Tutorial </a><br/>
+            </p>
 
 
-					<h2>Startups and Businesses</h2>
-						<p>
-							<a href="http://www.documentcloud.it">Cloud Docs:</a> Founder and Product Manager. Created all visual design<br />
-							<a href="http://www.aronsontech.com">Aronson Tech IT Services:</a> CTO and Partner for 1.5 yrs <br />
-							<a href="http://fi.co/">Founder Institute:</a> Member in the Silicon Valley Winter class<br />
-							<a href="http://www.startupmonthly.org/">Startup Monthly:</a> Won second place in a 5 week startup contest<br />
-							<a href="http://thedressingroommirror.com/"> The Dressing Room Mirror:</a> Designed all features, graphics and user interface <br />
-							<a href="https://apps.facebook.com/communitymirror/"> The Community Mirror: </a> Founder, Product Manager. Created all visual design<br/>
-							<a href="http://anediblegarden.com/"> An Edible Garden: </a>Created all visual design<br />
-							<a href="http://sixmonthtrip.com/index.html">Travel Book:</a> Created concept and all visual design<br />
-							<a href="http://www.katrinaafterthestorm.com/">Hurricane Katrina Book: </a>Created all visual design and cover photography<br />
-							
+          <h2>Startups and Businesses</h2>
+          <p>
+            <a href="http://www.documentcloud.it">Cloud Docs:</a> Founder and Product Manager. Created all visual design<br />
+            <a href="http://www.aronsontech.com">Aronson Tech IT Services:</a> CTO and Partner for 1.5 yrs <br />
+            <a href="http://fi.co/">Founder Institute:</a> Member in the Silicon Valley Winter class<br />
+            <a href="http://www.startupmonthly.org/">Startup Monthly:</a> Won second place in a 5 week startup contest<br />
+            <a href="http://thedressingroommirror.com/"> The Dressing Room Mirror:</a> Designed all features, graphics and user interface <br />
+            <a href="https://apps.facebook.com/communitymirror/"> The Community Mirror: </a> Founder, Product Manager. Created all visual design<br/>
 						<p>
 
 					<h2>Non Coding Projects</h2>
