--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <section id="main_content">
 	
           <h2>Coding Work and Experience</h2>
-          <h5>Many are on free heroku account and may take 60 seconds to spin up</h5>
+          <h5>Many are on free heroku accounts and take 60 seconds to spin up</h5>
 						<p>
               <a href="http://cat-sitter.herokuapp.com/">Catering Management Tool:</a> Current Project <br/>
               <a href="http://adventuringschool.com/">Adventuring School</a> Adventure Class Market Place <br/>
